# Parking-Slot

./: README.md  todo_list.md  welkin.json
src/: CMakeLists.txt  Makefile  src.pro
src/apps/: CMakeLists.txt  Makefile  apps.pro  apps_zh_cn.ts
src/apps/bamboo_parklot/: CMakeLists.txt  Makefile  README.md  bamboo_parklot.pro  box_convert.py  corner_detector.cpp  corner_detector.h  data_preprocessor.cpp  data_preprocessor.h  file_system.cpp  file_system.h  main.cpp  main_viewer.cpp  main_viewer.h  mainwindow.cpp  mainwindow.h  ocr_detector.cpp  ocr_detector.h  ocr_model.cpp  ocr_model.h  ocr_recognizer.cpp  ocr_recognizer.h  parkline.cpp  parkline.h  parkline_optimizer.cpp  parkline_optimizer.h  parkspace.cpp  parkspace.h  parkspacegroup.cpp  parkspacegroup.h  project_widget.cpp  project_widget.h  slot_generator.cpp  slot_generator.h  template_matcher.cpp  template_matcher.h
src/depends/: base.pri  boost.pri  ceres.pri  common.pri  dxflib.pri  e57format.pri  eigen.pri  flann.pri  glog.pri  laszip.pri  libdxfrw.pri  opencv.pri  options.pri  osg.pri  pcl.pri  protobuf.pri  sam.pri  uface.pri  vtk.pri
src/libs/: CMakeLists.txt  Makefile  libs.pri  libs.pro  libs_zh_cn.qm
src/libs/bamboo/: CMakeLists.txt  Makefile  bamboo.pri  bamboo.pro  ui_model_param_dialog.h
src/plugins/: CMakeLists.txt  plugins.pro
src/plugins/tool_convertor/: cloud_convertor_widget.cpp  cloud_convertor_widget.h  cloud_convertor_widget.ui  plugin.cpp  plugin.h  tool_convertor.pro
src/test/: CMakeLists.txt  Makefile  test.pro
src/test/dxfio/: CMakeLists.txt  Makefile  dxf_io.h  dxfio.pro  (+1 more)
(+173 files in other folders)
