# add_subdirectory(bamboo_data_import)
# add_subdirectory(bamboo_data_clean)
# add_subdirectory(bamboo_building_split)
# add_subdirectory(bamboo_building_segment)

# add_subdirectory(bamboo_cloud)
# add_subdirectory(bamboo_surface_feature)
# add_subdirectory(bamboo_building)

add_subdirectory(bamboo_surface)